--- a/styles.css
+++ b/styles.css
@@ -21,3 +21,29 @@ body {
 img {
     display: block;
 }
+
+.container{
+    display:grid;
+    width: 1080px;
+    height: 450px;
+    border: 3px solid blue;
+}
+
+.profile-img {
+   float: right;
+   border-radius: 50%;
+   border: 6px solid darkolivegreen;
+    width: 100px;
+    height: 45px;
+    padding: 1em;
+    margin: 5px;
+
+}
+
+.profile-user-settings, .profile-stats, .profile-bio{
+    float: left;
+    padding: 1em;
+    margin: 5px;
+    justify-items: flex-end;
+}
+
