--- a/styles.css
+++ b/styles.css
@@ -12,24 +12,31 @@
 
 body {
     font-family: "Open Sans", Arial, sans-serif;
-    min-height: 100vh;
+    max-height: 100vh;
+    max-width: 100vw;
     background-color: #fafafa;
     color: #262626;
     padding-bottom: 3rem;
 }
 
-
+img{
+    display: block;
+    height: 100px;
+    width:50px;
+    object-fit: scale-down;
+}
 
 .container{
     display: flex;
-    position: absolute;
-    width:926px;
-    height:300px;
+   
+    width:100vw;
+    height:30vh;
     
 }
 
 .profile-image{
     justify-content: left;
+    position: absolute;
     
 }
 
@@ -64,44 +71,103 @@ body {
 
 
 /*.main-container{
-    height: 900px ;
-}*/
-
-
-/*.gallery{
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: center;
+}
+*/
+.gallery{
     display: grid;
-    width: repeat(150px, 3fr);
-    height: 900px;
-    grid-template-areas:
-    "r1,r1,r1",
-    "r2,r2,r2",
-    "r3,r3,r3",
-    "r4,r4,r4";
+    grid-template-columns: repeat(20vh, 1fr);
+    grid-template-rows: 30vh 25vh 25vh 25vh;
     grid-gap:6px;
-    object-fit: fit;
 }
 
-.gallery-item1{
-    grid-area:r1;
-    height: 300px;
+.gallery-item1, .gallery-item-info1{
+    grid-column: 1 / 2;
+    grid-row: 1/2;
+    
+    
 }
 
-.gallery-item2{
-    grid-area:r2;
-    height: 200px;
+.gallery-item2, .gallery-item-info2{
+    
+    grid-column: 2/ 3;
+    grid-row: 1/2;
 }
 
-.gallery-item3{
-    grid-area:r3;
-    height: 200px;
+.gallery-item3, .gallery-item-info3{
+    
+    grid-column: 3/ 4;
+    grid-row: 1/2;
 }
 
-.gallery-item4{
-    grid-area:r4;
-    height: 200px;
+.gallery-item4, .gallery-item-info4{
+    
+    grid-column: 1 / 2;
+    grid-row: 2/3;
+}
+
+.gallery-item5, .gallery-item-info5{
+    
+    grid-column: 2 / 3;
+    grid-row: 2/3;
+}
+
+.gallery-item6, .gallery-item-info6{
+    
+    grid-column: 3/4;
+    grid-row: 2/3;
+}
+
+
+.gallery-item7, .gallery-item-info7{
+    
+    grid-column: 1/2;
+    grid-row: 3/4;
+}
+
+.gallery-item8,.gallery-item-info8{
+
+    grid-column: 2/3;
+    grid-row: 3/4;
+}
+
+.gallery-item9, .gallery-item-info9{
+    
+    grid-column: 3/4;
+    grid-row: 3/4;
+}
+
+.gallery-item10, .gallery-item-info10{
+    
+    grid-column: 1/2;
+    grid-row: 4/5;
+}
+
+.gallery-item11, .gallery-item-info11{
+    
+    grid-column: 2/3;
+    grid-row: 4/5;
+}
+
+.gallery-item12, .gallery-item-info12{
+    
+    grid-column: 3/4;
+    grid-row: 4/5;
 }
 
 .gallery-image{
-    height:150px;
-    width: 70px;
-}*/
+   width:100%;
+   height: auto;
+   object-fit: cover;
+   z-index: 1;
+    
+}
+
+.gallery-item-info, .gallery-item-type{
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    
+}
