--- a/styles.css
+++ b/styles.css
@@ -12,15 +12,14 @@
 
 body {
     font-family: "Open Sans", Arial, sans-serif;
-    max-height: 100vh;
-    max-width: 100vw;
+   
     background-color: #fafafa;
     color: #262626;
     padding-bottom: 3rem;
 }
 
 img{
-    display: block;
+    display:inline;
     height: 100px;
     width:50px;
     object-fit: scale-down;
@@ -64,110 +63,31 @@ img{
     margin: -200px 190px;
 }
 
-
-
-
-
-
-
-/*.main-container{
+.main-container{
     display: flex;
+    max-height: auto;
+    max-width: 100vw;
+    gap:6px;
     flex-wrap: wrap;
+    flex-direction: row;
+    flex-flow: row;
     justify-content: center;
+    
+    
 }
-*/
+
 .gallery{
-    display: grid;
-    grid-template-columns: repeat(20vh, 1fr);
-    grid-template-rows: 30vh 25vh 25vh 25vh;
-    grid-gap:6px;
-}
+    max-height:100vh;
+    max-width: 100vw;
+    align-items:center;
 
-.gallery-item1, .gallery-item-info1{
-    grid-column: 1 / 2;
-    grid-row: 1/2;
-    
-    
-}
 
-.gallery-item2, .gallery-item-info2{
-    
-    grid-column: 2/ 3;
-    grid-row: 1/2;
-}
-
-.gallery-item3, .gallery-item-info3{
-    
-    grid-column: 3/ 4;
-    grid-row: 1/2;
-}
-
-.gallery-item4, .gallery-item-info4{
-    
-    grid-column: 1 / 2;
-    grid-row: 2/3;
-}
-
-.gallery-item5, .gallery-item-info5{
-    
-    grid-column: 2 / 3;
-    grid-row: 2/3;
-}
-
-.gallery-item6, .gallery-item-info6{
-    
-    grid-column: 3/4;
-    grid-row: 2/3;
 }
 
 
-.gallery-item7, .gallery-item-info7{
-    
-    grid-column: 1/2;
-    grid-row: 3/4;
-}
-
-.gallery-item8,.gallery-item-info8{
-
-    grid-column: 2/3;
-    grid-row: 3/4;
-}
-
-.gallery-item9, .gallery-item-info9{
-    
-    grid-column: 3/4;
-    grid-row: 3/4;
-}
-
-.gallery-item10, .gallery-item-info10{
-    
-    grid-column: 1/2;
-    grid-row: 4/5;
-}
-
-.gallery-item11, .gallery-item-info11{
-    
-    grid-column: 2/3;
-    grid-row: 4/5;
-}
-
-.gallery-item12, .gallery-item-info12{
-    
-    grid-column: 3/4;
-    grid-row: 4/5;
-}
 
 .gallery-image{
-   width:100%;
-   height: auto;
-   object-fit: cover;
-   z-index: 1;
-    
-}
-
-.gallery-item-info, .gallery-item-type{
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    
+    width: 30vw;
+    height: 250px;
+    object-fit:cover;
 }
