--- a/styles.css
+++ b/styles.css
@@ -12,28 +12,101 @@
 
 body {
     font-family: "Open Sans", Arial, sans-serif;
-   
     background-color: #fafafa;
     color: #262626;
     padding-bottom: 3rem;
 }
 
-img{
-    display:inline;
-    height: 100px;
-    width:50px;
-    object-fit: scale-down;
-}
 
-.container{
-    display: flex;
-   
-    width:100vw;
-    height:30vh;
     
+
+
+/*HEADER SECTION*/
+
+.header{
+    display: grid;
+    justify-content: center;
+    align-items:center;
+    grid-template-columns: 1fr 1fr 1fr;  
+    grid-template-rows: 1fr 1fr 1fr; 
+    gap: 0px 0px; 
+    grid-template-areas: 
+      "i U U"
+      "i I I"
+      "i b b"; 
+    justify-items: stretch; 
 }
 
 .profile-image{
+    /*width: 300px;
+    height:300px;*/
+    grid-area: i;
+}
+
+.profile-image > img{
+    height: 300px;
+    width:300px;
+    border: 8px solid #506b43;
+    border-radius: 50%;
+    
+}
+
+.profile-info{
+    display: flex;
+   float:right;
+}
+
+.profile-user-settings{
+    grid-area:u;
+}
+
+
+.profile-stats{
+    grid-area: s;
+} 
+
+.profile-bio{
+    grid-area:b;
+
+}
+
+    /*grid-template-areas: 
+    "i u b s"
+    "i p p p"
+    "i a a a";
+    width:100vw;
+    height:250px;
+
+
+
+
+.profile-image{
+    grid-area: i;
+
+}
+
+.profile-username{
+    grid-area: u;
+}
+
+.btn profile-edit-btn{
+    grid-area: b;
+}
+
+.btn profile-settings-btn{
+    grid-area: s;
+}
+
+.profile-stats{
+    grid-area:p;
+
+}
+
+.profile-bio{
+    grid-area:a;
+}*/
+
+/*.profile-image{
     justify-content: left;
     position: absolute;
     
@@ -61,33 +134,73 @@ img{
 .profile-user-settings{
     position:absolute;
     margin: -200px 190px;
+}*/
+
+/*MAIN SECTION*/
+
+
+.main{
+    height:auto;
+    width: 100vw;
 }
+
+
 
 .main-container{
     display: flex;
-    max-height: auto;
+    justify-content: space-around;
+    flex-wrap:nowrap;
+    align-items: center;
     max-width: 100vw;
-    gap:6px;
-    flex-wrap: wrap;
-    flex-direction: row;
-    flex-flow: row;
-    justify-content: center;
-    
-    
+    gap:6px;   
 }
 
 .gallery{
-    max-height:100vh;
-    max-width: 100vw;
-    align-items:center;
-
-
+    flex-wrap: wrap;
+    display:grid;
+    justify-items:center;
+    margin: 10px 20px;
 }
 
 
 
 .gallery-image{
-    width: 30vw;
-    height: 250px;
+    height:300px;
+    width:300px;
     object-fit:cover;
 }
+
+/*.gallery-item{
+    display: flex;
+    align-items: center;
+    justify-content: space-around;
+    z-index: 1;
+    position:absolute;
+    opacity:0;
+    object-fit:contain;
+    height:300px;
+}
+*/
+
+
+/*.gallery-item-type, .gallery-item-info:hover{
+    opacity: 100%;
+}*/
+
+.loader{
+    border: 12px solid grey;
+    border-radius:50%;
+    width: 100px;
+    height: 100px;
+    border-top: 12px solid lightgray;
+    animation: spin 2.5s linear infinite;
+}
+
+@keyframes spin {
+    0%{
+        transform: rotate(0deg);
+    }
+    100%{
+        transform: rotate(360deg);
+    }
+    }
