--- a/styles.css
+++ b/styles.css
@@ -25,6 +25,7 @@ body {
 
 .header{
     display: grid;
+    margin: 15px 0px;
     justify-content: center;
     align-items:center;
     grid-template-columns: 1fr 1fr 1fr;  
@@ -38,52 +39,36 @@ body {
 }
 
 .profile-image{
-    /*width: 300px;
-    height:300px;*/
+    
     grid-area: i;
+    grid-row: span3;
 }
 
 .profile-image > img{
-    height: 300px;
-    width:300px;
+    height: 200px;
+    width:200px;
     border: 8px solid #506b43;
     border-radius: 50%;
     
 }
 
-.profile-info{
-    display: flex;
-   float:right;
-}
 
 .profile-user-settings{
     grid-area:u;
+    grid-column: span2;
 }
 
 
 .profile-stats{
     grid-area: s;
+    grid-column: span2;
 } 
 
 .profile-bio{
     grid-area:b;
-
+    grid-column: span2;
 }
 
-    /*grid-template-areas: 
-    "i u b s"
-    "i p p p"
-    "i a a a";
-    width:100vw;
-    height:250px;
-
-
-
-
-.profile-image{
-    grid-area: i;
-
-}
 
 .profile-username{
     grid-area: u;
@@ -104,14 +89,13 @@ body {
 
 .profile-bio{
     grid-area:a;
-}*/
+}*/ 
 
-/*.profile-image{
+.profile-image{
     justify-content: left;
     position: absolute;
     
 }
-
 
 .profile-image > .img{
     float:left;
@@ -121,70 +105,58 @@ body {
     border-radius: 50%;
 }
 
-.profile-user-settings{
-    display:inline-flex
-}
-
-.profile-info{
-    flex-wrap: wrap;
-    float: right;
-    
-}
-
-.profile-user-settings{
-    position:absolute;
-    margin: -200px 190px;
-}*/
 
 /*MAIN SECTION*/
 
-
 .main{
-    height:auto;
+    
     width: 100vw;
+
 }
-
-
 
 .main-container{
     display: flex;
     justify-content: space-around;
-    flex-wrap:nowrap;
-    align-items: center;
-    max-width: 100vw;
-    gap:6px;   
+    flex-direction:row;
+    flex-wrap:wrap;
 }
 
 .gallery{
-    flex-wrap: wrap;
+
     display:grid;
     justify-items:center;
-    margin: 10px 20px;
+    align-items: center;
+    
 }
 
-
+.gallery-item{
+    width: auto;
+    height: 300px;
+}
 
 .gallery-image{
-    height:300px;
-    width:300px;
+    width:100%;
+    height:250px;
     object-fit:cover;
 }
 
-/*.gallery-item{
+./*gallery-item{
     display: flex;
     align-items: center;
-    justify-content: space-around;
+    justify-content: space-evenly;
     z-index: 1;
-    position:absolute;
     opacity:0;
     object-fit:contain;
     height:300px;
 }
-*/
-
-
-/*.gallery-item-type, .gallery-item-info:hover{
+.gallery-item-type:hover{
+    opacity:100%;
+    display:none;
+} 
+.gallery-item-info:hover{
     opacity: 100%;
+    position: fixed;
+    margin: auto 0px;
 }*/
 
 .loader{
@@ -194,6 +166,7 @@ body {
     height: 100px;
     border-top: 12px solid lightgray;
     animation: spin 2.5s linear infinite;
+    vertical-align: middle;
 }
 
 @keyframes spin {
