--- a/styles.css
+++ b/styles.css
@@ -18,16 +18,16 @@ body {
 }
 
 
-    
-
 
 /*HEADER SECTION*/
 
 .header{
     display: grid;
-    margin: 15px 0px;
+
     justify-content: center;
     align-items:center;
+    max-height: 300px;
+    max-width: 100vw;
     grid-template-columns: 1fr 1fr 1fr;  
     grid-template-rows: 1fr 1fr 1fr; 
     gap: 0px 0px; 
@@ -49,7 +49,6 @@ body {
     width:200px;
     border: 8px solid #506b43;
     border-radius: 50%;
-    
 }
 
 
@@ -89,58 +88,35 @@ body {
 
 .profile-bio{
     grid-area:a;
-}*/ 
-
-.profile-image{
-    justify-content: left;
-    position: absolute;
-    
-}
-
-.profile-image > .img{
-    float:left;
-    width: 50px;
-    height: 40px;
-    border: 5px solid #506b43;
-    border-radius: 50%;
 }
 
 
 /*MAIN SECTION*/
 
-.main{
-    
-    width: 100vw;
-
-}
-
 .main-container{
     display: flex;
     justify-content: space-around;
-    flex-direction:row;
     flex-wrap:wrap;
-}
-
-.gallery{
-
-    display:grid;
-    justify-items:center;
-    align-items: center;
     
 }
 
-.gallery-item{
-    width: auto;
-    height: 300px;
+.gallery{
+    width:150px;
+    height:300px;
+    display:grid;
+    justify-items:center;
+    align-content: center;
+    
 }
 
 .gallery-image{
-    width:100%;
-    height:250px;
+    
+    height:100px;
     object-fit:cover;
 }
 
-./*gallery-item{
+
+/*.gallery-item{
     display: flex;
     align-items: center;
     justify-content: space-evenly;
@@ -166,7 +142,6 @@ body {
     height: 100px;
     border-top: 12px solid lightgray;
     animation: spin 2.5s linear infinite;
-    vertical-align: middle;
 }
 
 @keyframes spin {
